tests/NormalTests/paczka1/fuzzy1/43311901.err
Error in line 4: WPdnynR S658 72,5
Error in line 7: LsF A518 25,1
Error in line 19: xjU2Gg S658 80,4
Error in line 21: xjU2Gg A518 77,0
Error in line 34: pfENdZ S664 49,4
Error in line 16: WPdnynR A518 86,2
Error in line 26: S658 A660 84,1
